<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/description_coin_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/tvSymbolDelimiter"
        app:layout_constraintTop_toTopOf="@id/tvSymbolDelimiter"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSymbolDelimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/symbol_delimiter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tvSymbolDelimiter"
        app:layout_constraintTop_toTopOf="@id/tvSymbolDelimiter"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSymbolDelimiter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tvLabelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/label_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/label_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelPrice"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0.000000000" />

            <View
                android:id="@+id/cuttingStrip1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrice" />

            <TextView
                android:id="@+id/tvLabelMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/label_min_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip1" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelMinPrice"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip1"
                tools:text="0.000000000" />

            <View
                android:id="@+id/cuttingStrip2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPrice" />

            <TextView
                android:id="@+id/tvLabelMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/label_max_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip2" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColor="@android:color/holo_green_light"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelMaxPrice"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip2"
                tools:text="0.000000000" />

            <View
                android:id="@+id/cuttingStrip3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPrice" />

            <TextView
                android:id="@+id/tvLabelLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/label_last_market"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip3" />

            <TextView
                android:id="@+id/tvLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelLastMarket"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip3"
                tools:text="XXX" />

            <View
                android:id="@+id/cuttingStrip4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarket" />

            <TextView
                android:id="@+id/tvLabelLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/label_last_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip4" />

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelLastUpdate"
                app:layout_constraintTop_toBottomOf="@id/cuttingStrip4"
                tools:text="00:00:00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>